--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "dependencies": {
     "express": "^4.14.0",
-    "mongodb": "^2.2.16"
+    "mongodb": "^2.2.19",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {},
   "scripts": {
